[package]
name = "rustspo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-std = { version = "1.13.2", features = ["attributes"] }
async-stream = "0.3.6"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
futures = "0.3.32"
http = "1.4.0"
http-types = "2.12.0"
httpmock = "0.8.3"
log = "0.4.29"
open = "5.3.5"
rand = { version = "0.8", features = ["std"] }
scopeguard = "1.2.0"
serde = "1.0.228"
serde_json = "1.0.149"
surf = "2.3.2"
thiserror = "2.0.18"
tiny_http = "0.12.0"
url = "2.5.8"
urlencoding = "2.1.3"
